--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,6 +4,10 @@
     %meta{"http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1" }
     %meta{ :charset => "utf-8" }
     %title= @title || 'Hack Reactions'
+    %link{ :rel=> 'stylesheet', :href=>"http://yui.yahooapis.com/pure/0.6.0/pure-min.css"}
+    %meta{ :name=> 'viewport', :content=>'width=device-width, initial-scale=1' }
+
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
   %body
     .container
       = yield
