showing each question by id

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,3 +1,7 @@
+%h2= @message
+%hr
 %h1 Welcome to Hack Reactioner
 %p
   %a{:href=> '/question/new'} Add a question
+%p
+  %a{:href=> '/question/all'} See Old Questions
