--- a/views/list.haml
+++ b/views/list.haml
@@ -1,3 +1,4 @@
 %h1= @title
 - @questions.each do |question|
-  %p= question.name
+  %p
+    %a{:href=>"/question/show/#{question.id}"}= question.title
