--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,8 +6,23 @@
     %title= @title || 'Hack Reactions'
     %link{ :rel=> 'stylesheet', :href=>"http://yui.yahooapis.com/pure/0.6.0/pure-min.css"}
     %meta{ :name=> 'viewport', :content=>'width=device-width, initial-scale=1' }
-
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
   %body
     .container
       = yield
+    :javascript
+      window.onload = function() {
+        (function() {
+
+          var show = function(el){
+            return function(msg){ el.innerHTML = msg + '<br />' + el.innerHTML; }
+          }(document.getElementById('msgs'));
+
+
+
+          var ws = new WebSocket('ws://' + window.location.host + window.location.pathname);
+          ws.onopen = function() { show('websocket opened') };
+          ws.onclose = function() { show('websocket closed') }
+
+
+        })();
+      }
