--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,20 +9,20 @@
   %body
     .container
       = yield
-    :javascript
-      window.onload = function() {
-        (function() {
-
-          var show = function(el){
-            return function(msg){ el.innerHTML = msg + '<br />' + el.innerHTML; }
-          }(document.getElementById('msgs'));
-
-
-
-          var ws = new WebSocket('ws://' + window.location.host + window.location.pathname);
-          ws.onopen = function() { show('websocket opened') };
-          ws.onclose = function() { show('websocket closed') }
-
-
-        })();
-      }
+    // :javascript
+    //   window.onload = function() {
+    //     (function() {
+    //
+    //       var show = function(el){
+    //         return function(msg){ el.innerHTML = msg + '<br />' + el.innerHTML; }
+    //       }(document.getElementById('msgs'));
+    //
+    //
+    //
+    //       var ws = new WebSocket('ws://' + window.location.host + window.location.pathname);
+    //       ws.onopen = function() { show('websocket opened') };
+    //       ws.onclose = function() { show('websocket closed') }
+    //
+    //
+    //     })();
+    //   }
