--- a/views/index.haml
+++ b/views/index.haml
@@ -1,13 +1,30 @@
-%h2= @message
-%hr
-#msgs
-%h1 Welcome to Hack Reactioner
-- if @current_question
-  .current-question
-    %h3 CURRENT question
-    %p= @current_question.title
+.pure-g
+  .pure-u-1-6
+    .pure-menu
+      %span.pure-menu-heading Stuff To Do
+      %ul.pure-menu-list
+        %li.pure-menu-item
+          %a.pure-menu-link{:href=> '/question/new'} Add a question
+        %li.pure-menu-item
+          %a.pure-menu-link{:href=> '/question/all'} See Old Questions
 
-%p
-  %a{:href=> '/question/new'} Add a question
-%p
-  %a{:href=> '/question/all'} See Old Questions
+  .pure-u-1-2
+    %h2= @message
+    %h2 Welcome to Hack Reactioner
+    %h2 Current Question to Vote:
+    - if @current_question
+      %h3= @current_question.title
+  .pure-u-1-3
+    - if @current_question
+      %ul
+      - @current_question.votes.each do |vote|
+        %li= vote.content
+
+
+      %form.pure-form{:action=>"/vote/create/#{@current_question.id}", :method=>"POST"}
+        %fieldset
+          %legend What to vote on?
+          %input{:type=>"hidden", :name=>"_method", :value=>"POST"}
+          %label{:for=> 'content'} Vote Content
+          %input#content{:type=>"text", :name=>"vote[content]", :placeholder=>"Say Something"}
+          %input.pure-button.pure-button-secondary{:type=>"submit", :name=>"submit", :value=>"Save"}
