--- a/views/new.haml
+++ b/views/new.haml
@@ -3,13 +3,14 @@
 .pure-g
   .pure-u-1-2
     %form.pure-form.pure-form-stacked{:action=>"/question/create", :method=>"POST"}
-      %legend Submit a New Question
-      %input{:type=>"hidden", :name=>"_method", :value=>"POST"}
-      %label{:for=> 'title'} Question name
-      %input#name{:type=>"text", :name=>"question[title]", :placeholder=>"Ask a question..."}
-      %label{:for=> 'current'} Set as the current question?
-      %input#current{:type=>'checkbox', :name=>"question[is_current]", :value=>"is_current"}
-      %input.pure-button.pure-button-secondary{:type=>"submit", :name=>"submit", :value=>"Save"}
+      %fieldset
+        %legend Submit a New Question
+        %input{:type=>"hidden", :name=>"_method", :value=>"POST"}
+        %label{:for=> 'title'} Question name
+        %input#name{:type=>"text", :name=>"question[title]", :placeholder=>"Ask a question..."}
+        %label{:for=> 'current'} Set as the current question?
+        %input#current{:type=>'checkbox', :name=>"question[is_current]", :value=>"is_current"}
+        %input.pure-button.pure-button-secondary{:type=>"submit", :name=>"submit", :value=>"Save"}
   .pure-u-1-2
     %p
       %a.pure-button.pure-button-primary{:href=>"/"} home
