--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,6 +9,8 @@
   %body
     .container
       = yield
+    %script{:type => "text/javascript", :src  => "https://code.jquery.com/jquery-2.1.4.min.js"}
+    %script{:type => "text/javascript", :src  => "javascripts/app.js"}
     // :javascript
     //   window.onload = function() {
     //     (function() {
